// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress input of dates: renders them below timeline 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Registered
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
  </ol>,
  <p
    className="ecl-u-type-paragraph-s ecl-u-type-bold"
  >
    Collection start date
    : 
    11/08/2019
  </p>,
  <p
    className="ecl-u-type-paragraph-s ecl-u-type-bold"
  >
    Collection closed earlier by the organisers
    : 
    09/09/2020
  </p>,
]
`;

exports[`Progress no input: provides feedback for unsupported timeline 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <p
    className="ecl-u-type-paragraph"
  >
    Given status cannot be mapped to currently supported timeline.
  </p>,
]
`;

exports[`Progress renders timeline in right order regardless of input order 1`] = `
Array [
  <h3
    className="ecl-u-type-heading-3"
  >
    Initiative progress
  </h3>,
  <ol
    className="ecl-timeline"
    data-ecl-timeline="true"
  >
    <li
      className="ecl-timeline__item"
    >
      <div
        className="ecl-timeline__label"
      >
        Registered
      </div>
      <div
        className="ecl-timeline__content"
      >
        11/08/2019
      </div>
    </li>
    <li
      className="ecl-timeline__item ecl-timeline__item--current"
    >
      <div
        className="ecl-timeline__label"
      >
        Ongoing
      </div>
      <div
        className="ecl-timeline__content"
      >
        09/09/2019
      </div>
    </li>
  </ol>,
]
`;

exports[`Progress renders timeline in right order regardless of input order 2`] = `
<li
  className="ecl-timeline__item"
>
  <div
    className="ecl-timeline__label"
  >
    Registered
  </div>
  <div
    className="ecl-timeline__content"
  >
    11/08/2019
  </div>
</li>
`;

exports[`Progress renders timeline in right order regardless of input order 3`] = `
<li
  className="ecl-timeline__item ecl-timeline__item--current"
>
  <div
    className="ecl-timeline__label"
  >
    Ongoing
  </div>
  <div
    className="ecl-timeline__content"
  >
    09/09/2019
  </div>
</li>
`;
